Update jod document
